traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:22: error: Unmatched closing brace '}' ignored here
    }
    ^TraversalDiagonal:28: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalDiagonal:31: error: expected start of definition
	override def forward()  {
                 ^TraversalDiagonal:34: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalDiagonal:37: error: expected start of definition
	override def backward() {
                 ^TraversalDiagonal:40: error: Unmatched closing brace '}' ignored here
}
^